--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<title>Mental Health aWHEREness: Point Collection Tool</title>
+	<title>Taal Evacuation Centers: Point Collection Tool</title>
 	<link href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" rel="stylesheet">
 	<link href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" rel="stylesheet">
 	<link href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet">
@@ -25,8 +25,8 @@
 	<body oncontextmenu="return false">
 	<div id="wrapper">
 		<div id="header">
-			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Mental Health aWHEREness</h1>
-		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know. <br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
+			<h1>Taal Volcano Eruption Evacuation Centers</h1>
+		        <h2>Click pins for information about the evacuation centers, or contribute data by adding points on the map. <br>Visit the <a href="https://docs.google.com/spreadsheets/d/1IpGif_b6Ws1vs2mq3A9XB_0eUjQ2JWwJnJE6KJoIHB8/edit#gid=0">this link</a> for a live list of evacuation centers.</h2>	 	
 		</div>
 		<div id="controls">
 			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: Please DO NOT use single quotation marks on your inputs. (e.g. I'm), or use '' instead. (e.g. I''m)</font>
@@ -43,11 +43,11 @@
 			<fieldset style="border: none;">
 				<ul style="list-style-type: none; padding-left: 0px">
 					<li><label for="fname">Name</label></li>
-					<li><input id="fname" name="fname" placeholder="Name of Service/Facility" size="40" type="text" required></li>
-					<li><label for="doctor">Doctor</label></li>
-					<li><textarea cols="40" id="doctor" name="doctor" placeholder="Who should we look for?" rows="5"></textarea></li>
-					<li><label for="address">Address</label></li>
-					<li><textarea cols="40" id="address" name="address" placeholder="Where can we find this?" rows="5"></textarea></li>
+					<li><input id="fname" name="fname" placeholder="Name of Evacuation Center" size="40" type="text" required></li>
+					<li><label for="alt">Alternate Name</label></li>
+					<li><textarea cols="40" id="alt" name="alt" placeholder="Alternate Name" rows="5"></textarea></li>
+					<li><label for="region">Region</label></li>
+					<li><textarea cols="40" id="region" name="region" placeholder="Region" rows="5"></textarea></li>
 					<li><label for="contactnum">Contact Number</label></li>
 					<li><input id="contactnum" name="contactnum" placeholder="Telephone or Mobile number to call" size="40" type="text" required></li>
 					<li><label for="email">Email Address</label></li>
@@ -100,7 +100,7 @@
 	          };         
 	          
 	          var cartoData = null; //These adds data from Carto using the SQL API, declares variables, and writes the SQL selection query
-	          var sqlQuery = "SELECT the_geom, address, name, doctor, contactnum, email, fee, website, hours, notes FROM " + config.cartoTablename;
+	          var sqlQuery = "SELECT the_geom, region, name, alt, contactnum, email, fee, website, hours, notes FROM " + config.cartoTablename;
 	          var map = L.map('map', { center: config.mapcenter, zoom: 5});   // Creates the Leaflet map object
 	          map.addControl(new L.Control.Fullscreen());
 		
@@ -126,7 +126,7 @@
 	              $.getJSON(getData, function (data) {
 	                  cartoData = L.geoJson(data, {
 	                      onEachFeature: function (feature, layer) {
-	                          layer.bindPopup('<b>Name: <\/b>' + feature.properties.name + '<br>' + '<b>Doctor: <\/b>' + feature.properties.doctor + '<br>' + '<b>Address: <\/b>' + feature.properties.address + '<br>' + '<b>Contact Number: <\/b>' + feature.properties.contactnum + '<br>' + '<b>Email Address: <\/b>' + feature.properties.email + '<br>' + '<b>Fees (Initial/Succeeding): <\/b>' + feature.properties.fee + '<br>' + '<b>Website: <\/b>' + feature.properties.website + '<br>' + '<b>Opening Hours: <\/b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: <\/b>' + feature.properties.notes + '');
+	                          layer.bindPopup('<b>EC Name: <\/b>' + feature.properties.name + '<br>' + '<b>Alternate Name: <\/b>' + feature.properties.alt + '<br>' + '<b>Region: <\/b>' + feature.properties.region + '<br>' + '<b>Contact Number: <\/b>' + feature.properties.contactnum + '<br>' + '<b>Email Address: <\/b>' + feature.properties.email + '<br>' + '<b>Fees (Initial/Succeeding): <\/b>' + feature.properties.fee + '<br>' + '<b>Website: <\/b>' + feature.properties.website + '<br>' + '<b>Opening Hours: <\/b>' + feature.properties.hours + '<br>' + '<b>Notes/Recommendations: <\/b>' + feature.properties.notes + '');
 	                      }           
 	                  }).addTo(map);
 	              });
@@ -185,8 +185,8 @@
 	          });
 	          function setData() {
 	              var enteredFname = "'" + JSON.stringify(fname.value.replace("'", "''")) + "'"
-	              var enteredAddress = "'" + JSON.stringify(address.value.replace("'", "''")) + "'"	
-	              var enteredDoctor = "'" + JSON.stringify(doctor.value.replace("'", "''")) + "'"			      
+	              var enteredAddress = "'" + JSON.stringify(region.value.replace("'", "''")) + "'"	
+	              var enteredDoctor = "'" + JSON.stringify(alt.value.replace("'", "''")) + "'"			      
 	              var enteredContactnum = "'" + JSON.stringify(contactnum.value.replace("'", "''")) + "'"	
 	              var enteredEmail = "'" + JSON.stringify(email.value.replace("'", "''")) + "'"	
 	              var enteredFee = "'" + JSON.stringify(fee.value.replace("'", "''")) + "'"			  
@@ -199,9 +199,9 @@
 	                  var drawing = "'" + JSON.stringify(layer.toGeoJSON().geometry) + "'",   //Converts the drawing to a GeoJSON
 	                      sql = "SELECT " + config.cartoInsertFunction + "("; //Constructs the SQL Query from the entered parameters on the dialog/form
 	                  sql += drawing;
-	                  sql += "," + enteredAddress;
+	                  sql += "," + enteredRegion;
 	                  sql += "," + enteredFname;
-	                  sql += "," + enteredDoctor;
+	                  sql += "," + enteredAlt;
 	                  sql += "," + enteredContactnum;
 	                  sql += "," + enteredEmail;			      
 	                  sql += "," + enteredFee;
@@ -225,9 +225,9 @@
 	                      }
 	                  });
 	                  var newData = layer.toGeoJSON();
-	                    newData.properties.address = address.value;
+	                    newData.properties.address = region.value;
 	                    newData.properties.name = fname.value;
-	                    newData.properties.doctor = doctor.value;
+	                    newData.properties.doctor = alt.value;
 	                    newData.properties.contactnum = contactnum.value;
 	                    newData.properties.email = email.value;			      
 	                    newData.properties.fee = fee.value;
