--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 	          });
 	          function setData() {
 	              var enteredFname = "'" + JSON.stringify(fname.value.replace("'", "''")) + "'"
-	              var enteredAddress = "'" + JSON.stringify(region.value.replace("'", "''")) + "'"	
-	              var enteredDoctor = "'" + JSON.stringify(alt.value.replace("'", "''")) + "'"			      
+	              var enteredRegion = "'" + JSON.stringify(region.value.replace("'", "''")) + "'"	
+	              var enteredAlt = "'" + JSON.stringify(alt.value.replace("'", "''")) + "'"			      
 	              var enteredContactnum = "'" + JSON.stringify(contactnum.value.replace("'", "''")) + "'"	
 	              var enteredEmail = "'" + JSON.stringify(email.value.replace("'", "''")) + "'"	
 	              var enteredFee = "'" + JSON.stringify(fee.value.replace("'", "''")) + "'"			  
