--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know. <br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
-			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: Please DO NOT use single quotation marks on your inputs. (e.g. I'm), or use '' instead. (e.g. I''m)</font>
+			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: Note, the locations reflected here may or may not be accurate as some services may not have physical reception/location. Since these are online, anyone from anywhere in the country may contact these services for help for their mental health.</font>
 			
 		</div>
 		<div id="map"></div>
