--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<title>Mental Health aWHEREness: Point Collection Tool</title>
+	<title>Mental Health aWHEREness: Centers Offering FREE Online Psychological Services During the COVID-19 Pandemic</title>
 	<link href="https://unpkg.com/leaflet@0.7.7/dist/leaflet.css" rel="stylesheet">
 	<link href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" rel="stylesheet">
 	<link href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet">
@@ -26,10 +26,10 @@
 	<div id="wrapper">
 		<div id="header">
 			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Mental Health aWHEREness</h1>
-		        <h2>Click pins for information on MH resources, or contribute data by adding points for the MH resources and facilities that you know. <br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
+		        <h2>The data reflected here are from the Psychological Association of the Philippines (PAP). Click pins for information on these centers that offer free psychological services during the COVID-19 Pandemic, or contribute data by adding points for the services that you know. For centers with no physical reception/location, pin the location on the city where most of the members of the center are located (if known).<br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
-			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: Note, the locations reflected here may or may not be accurate as some services may not have physical reception/location. Since these are online, anyone from anywhere in the country may contact these services for help for their mental health.</font>
+			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: The locations reflected here may or may not be accurate as some services may not have physical reception/location. Since these are online, anyone from anywhere in the country may contact these services for help for their mental health.</font>
 			
 		</div>
 		<div id="map"></div>
