--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		        <h2>The data reflected here are from the Psychological Association of the Philippines (PAP). Click pins for information on these centers that offer free psychological services during the COVID-19 Pandemic, or contribute data by adding points for the services that you know. For centers with no physical reception/location, pin the location on the city where most of the members of the center are located (if known).<br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
-			<input onclick="startEdits()" type="button" value="Click to Start Editing"> <input onclick="stopEdits()" type="button" value="Stop Your Editing Session"><br> <font color="red">NOTE: The locations reflected here may or may not be accurate as some services may not have physical reception/location. Since these are online, anyone from anywhere in the country may contact these services for help for their mental health.</font>
+			<input onclick="startEdits()" type="button" value="Click to add points."> <input onclick="stopEdits()" type="button" value="Stop adding points."><br> <font color="red">NOTE: The locations reflected here may or may not be accurate as some services may not have physical reception/location. Since these are online, anyone from anywhere in the country may contact these services for help for their mental health.</font>
 			
 		</div>
 		<div id="map"></div>
