--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body oncontextmenu="return false">
 	<div id="wrapper">
 		<div id="header">
-			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Centers Offering FREE Online Psychological Services During the COVID-19 Pandemic</h1>
+			<a href="https://mentalhealthawhereness.com"><img src="https://mhaphmap.files.wordpress.com/2019/05/mhaphlogo-1.png" alt="Mental Health aWHEREness" style="width:50px; height:40px; border:0"></a><h1>Centers Offering Online Psychological Services During the COVID-19 Pandemic</h1>
 		        <h2>The data reflected here are from the Psychological Association of the Philippines (PAP), updated as of May 14, 2020. We have then researched for other information (address, contact numbers, etc.) from available online resources and from the MHAPh Directory. Click pins for information on these centers that offer free psychological services during the COVID-19 Pandemic, or contribute data by adding points for the services that you know. For centers with no physical reception/location, pin the location on the city where most of the members of the center are located (if known).<br>Visit the <a href="https://mentalhealthawhereness.com">Mental Health aWHEREness</a> website for more information on how to contribute.</h2>	 	
 		</div>
 		<div id="controls">
